// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CModalDialog customize 1`] = `
<div>
  <div
    class="modal-dialog modal-dialog-centered modal-fullscreen-lg-down modal-dialog-scrollable modal-xl bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CModalDialog component 1`] = `
<div>
  <div
    class="modal-dialog"
  >
    Test
  </div>
</div>
`;
